# AI-data-analyst

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/agents/: intent_classifier.py  query_validator.py  response.py  schema_inspector.py  sql_agent.py  workflow.py
app/analytics/: anomaly.py  engine.py  kpi.py  segmentation.py  trends.py
app/core/: config.py  logging.py
app/core/observability/: health.py  metrics.py  middleware.py
app/data/: database.py
app/data/models/: business.py
app/llm/: client.py  insights.py  parser.py  prompts.py  schemas.py
app/rag/: embeddings.py  pipeline.py  retrieval.py  vectorstore.py
app/rag/knowledge_base/: analysis_playbooks.md  business_context.md  metrics_definitions.md
app/reports/: builder.py  markdown_renderer.py  pdf_renderer.py  templates.py
app/visualization/: charts.py  engine.py
docker/: Dockerfile.streamlit
docs/architecture/: SYSTEM_DESIGN.md
docs/decisions/: ADR-001-tech-stack.md
frontend/: components.py  main.py  styles.py
scripts/: output.txt  seed_data.py  startup.py  test_analytics.py  test_llm.py  test_rag.py  test_reports.py  test_sql_agent.py  test_visualization.py  test_workflow.py  verify_data.py
tests/integration/: test_api.py
tests/unit/: test_analytics.py  test_api.py  test_config.py  test_validator.py
